# antitrust-rag-core

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements-weaviate.txt  requirements.txt  ui.py
app/: main.py
app/api/: deps.py
app/api/routes/: documents.py  search.py
app/application/: context_formatting.py  dto.py  errors.py  evaluation.py  ingestion_service.py  rag_service.py  reranking.py  retrieval_service.py
app/application/chunking/: legal_chunker.py
app/core/: config.py  logging.py
app/domain/: entities.py  ports.py
app/infrastructure/: clock.py  embedding.py  embedding_ollama.py  id_generator.py  llm_mock.py  llm_ollama.py  repositories.py  vector_store_in_memory.py  vector_store_weaviate.py
docs/: DEVELOPER_GUIDE.md
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 0001_initial_schema.py
infra/postgres/: 01_init.sql
services/api/: Dockerfile  requirements.txt
services/api/app/: main.py
services/api/app/api/: deps.py  middleware.py
services/api/app/application/: context_formatting.py  errors.py  evaluation.py  query_sanitizer.py  rag_service.py  reranking.py  (+1 more)
services/worker/: Dockerfile  requirements.txt
services/worker/worker/: celery_app.py
shared/: pyproject.toml
shared/legal_rag_shared/: __init__.py
shared/legal_rag_shared/db/: __init__.py  base.py  models.py
shared/legal_rag_shared/domain/: __init__.py  entities.py  ports.py
shared/legal_rag_shared/schemas/: __init__.py  tasks.py
tests/: test_chunker.py  test_french_chunker.py  test_rag.py  test_reranker.py
(+29 files in other folders)
