[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag-shared"
version = "0.1.0"
description = "Shared domain models and schemas for the Hierarchical Legal RAG system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["legal_rag_shared*"]
